fixed the table. added links to imdb

--- a/skeleton.html
+++ b/skeleton.html
@@ -1,46 +1,82 @@
-AFI's 10 Greatest American Movies of all Time
-
-#
-MOVIE
-YEAR
-
-1
-CITIZEN KANE
-1941
-
-2
-CASABLANCA
-1942
-
-3
-THE GODFATHER
-1972
-
-4
-GONE WITH THE WIND
-1939
-
-5
-LAWRENCE OF ARABIA
-1962
-
-6
-THE WIZARD OF OZ
-1939
-
-7
-THE GRADUATE
-1967
-
-8
-ON THE WATERFRONT
-1954
-
-9
-SCHINDLER'S LIST
-1993
-
-10
-SINGIN' IN THE RAIN
-1952
+<!DOCTYPE html>
+<html>
+	<head>
+		
+	</head>
+	<body>
+		<h1>AFI's 10 Greatest American Movies of all Time</h1>
+		<table style="border: 1px solid black">
+			<thead>
+				<tr style="border: 1px solid black">
+					<th style="border: 1px solid black">#</th>
+					<th style="border: 1px solid black">MOVIE</th>
+					<th style="border: 1px solid black">YEAR</th>
+					<th style="border: 1px solid black">Wiki</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">1</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0033467/?ref_=nv_sr_1">CITIZEN KANE</a></td>
+					<td style="border: 1px solid black">1941</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">2</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0034583/?ref_=nv_sr_1">CASABLANCA</a></td>
+					<td style="border: 1px solid black">1942</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">3</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0068646/?ref_=nv_sr_1">THE GODFATHER</a></td>
+					<td style="border: 1px solid black">1972</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">4</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0031381/?ref_=nv_sr_2">GONE WITH THE WIND</a></td>
+					<td style="border: 1px solid black">1939</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">5</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0056172/?ref_=nv_sr_3">LAWRENCE OF ARABIA</a></td>
+					<td style="border: 1px solid black">1962</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">6</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0032138/?ref_=nv_sr_1">THE WIZARD OF OZ</a></td>
+					<td style="border: 1px solid black">1939</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">7</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0061722/?ref_=nv_sr_2">THE GRADUATE</a></td>
+					<td style="border: 1px solid black">1967</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">8</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0047296/?ref_=nv_sr_2">ON THE WATERFRONT</a></td>
+					<td style="border: 1px solid black">1954</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">9</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0108052/?ref_=nv_sr_1">SCHINDLER'S LIST</a></td>
+					<td style="border: 1px solid black">1993</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+				<tr style="border: 1px solid black">
+					<td style="border: 1px solid black">10</td>
+					<td style="border: 1px solid black"><a href="http://www.imdb.com/title/tt0045152/?ref_=nv_sr_1">SINGIN' IN THE RAIN</a></td>
+					<td style="border: 1px solid black">1952</td>
+					<td style="border: 1px solid black"></td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
+</html>
 
